# mkgen

./: .gitignore  README.md  pyproject.toml
makefile-generator/: cli.py
makefile-generator/command/: generate.py
makefile-generator/config/: definitions.py
makefile-generator/templates/: _WIN32.mak.j2  __APPLE__.mak.j2  __linux__.mak.j2  cross-platform.mak.j2
src/makefile_generator/: cli.py
src/makefile_generator/cli_helpers/: __init__.py  command.py  help_text.py  parser.py
src/makefile_generator/command/: __init__.py  generate.py
src/makefile_generator/config/: __init__.py  constants.py  definitions.py
src/makefile_generator/utils/: __init__.py  display_utils.py  prompt_utils.py
