[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkgen"
version = "0.1.0"
description = "A C/C++ makefile generator"
readme = "README.md"
requires-python = ">=3.10"
licence = {text = "MIT"}
authors = [
    {name="Myson Dio", email=""}
]
dependencies = [
    "rich>=14.2.0",
    "jinja2>=3.1.5"
]

[project.urls]
Homepage = "https://github.com/gtRZync"
Documentation = "https://github.com/gtRZync/makefile-generator"

[project.scripts]

