[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkgen"
version = "0.1.0"
description = "A C/C++ makefile generator"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name="Myson Dio"}
]
dependencies = [
    "rich>=14.2.0",
    "jinja2>=3.1.5"
]

[project.urls]
Homepage = "https://github.com/gtRZync"
Documentation = "https://github.com/gtRZync/mkgen"

[project.scripts]
mkgen = "makefile_generator.cli:main"

[tools.setuptools.packages.find]
where = ["src"]